[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/BMYEONSUNG_ttf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI Images/Frame.png" type="Texture" id=2]
[ext_resource path="res://GUI/Slot/Slot.gd" type="Script" id=3]
[ext_resource path="res://GUI/AffixesTooltip/AffixesTooltip.tscn" type="PackedScene" id=5]



[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Slot" type="TextureRect"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantity" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -30.0
margin_right = -8.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Tooltip" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
margin_left = 81.0
margin_right = -335.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Item" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0
mouse_filter = 1
button_mask = 3
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
[connection signal="pressed" from="Item" to="." method="_on_Item_pressed"]
